force-app/main/default/objects/nFORCE__Rule_Engine_Rule__c/fields/nFORCE__Active__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Active__c</fullName>
    <description>This field indicates if the rule is active. This field is automatically populated based on the start and end dates entered in the rule engine when setting up a new rule.</description>
    <formula>(nFORCE__Start_Date__c &lt;= TODAY()) &amp;&amp; (ISBLANK(nFORCE__End_Date__c) || nFORCE__End_Date__c &gt;= TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>