force-app/main/default/objects/nFORCE__Rule_Engine_Rule__c/fields/nFORCE__Description__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Description__c</fullName>
    <description>This field is manually entered and optional. It is used to provide a description of the rule being set. Although not required, it is recommended to include a description as best practice.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>