force-app/main/default/objects/nFORCE__Rule_Engine_Rule__c/fields/nFORCE__End_Date__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__End_Date__c</fullName>
    <description>The field is optional. It contains the last date on which the template may be used. After this date the template will no longer be considered as active. If the date is not specified the the rule will be considered as active if the Start Date requirement is met.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>