force-app/main/default/objects/nFORCE__Rule_Engine_Rule__c/fields/nFORCE__Rule_Engine_Context_Rule__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Rule_Engine_Context_Rule__c</fullName>
    <description>This field is manually selected and required. This picklist will smart filter the options based on the context selected. This field is used to specify the rule/decision which the Rule Engine  implements. This is used with Rule Engine Rule Name to link the action with nCino to the logic built in Salesforce Flow.</description>
    <label>Rule Engine Context Rule</label>
    <referenceTo>nFORCE__Rule_Engine_Context_Rule__c</referenceTo>
    <relationshipLabel>Rule Engine Rules</relationshipLabel>
    <relationshipName>Rule_Engine_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>